--- a/thesis/ack.tex
+++ b/thesis/ack.tex
@@ -6,7 +6,7 @@ I could not have completed this thesis without my incredible supervisors: Naomi 
 
 Much of this work was done in my office at Mount Stromlo while I bothered my office-mates: Eloise Birchall, Adam Rains, Lara Cullinane, and for a time Rajika Kuruwita and Alex Wallace. Without their welcome distractions I would not have been able to concentrate. Of course, Mount Stromlo was more than just my office, and I also must thank Henry Zovaro, Phil Taylor, Karlie Noon, Jack Livingston, Fiona Panther, and Alec Thomson for their contributions to the atmosphere of the observatory while I was there, as well as Howard Coyle and Michelle Cicolini for keeping the observatory running smoothly. I would also like to thank my colleagues at Data61: Cody Christopher, Steve Edwards, and Angus Gruen, who provided an excellent sounding board to my many astronomical problems.
 
-Chapters 4 and 5 rely heavily on results from the Radio Galaxy Zoo citizen science project. I would like to thank all 10~000+ volunteers who contributed to the project, as well as the members of the Radio Galaxy Zoo collaboration, notably Stas Shabala, Larry Rudnick, Heinz Andernach, Avery Garon, Anna Kapinska, and Ray Norris, all of whom contributed to discussion of my work for these chapters.
+Chapters 4 and 5 rely heavily on results from the Radio Galaxy Zoo citizen science project. I would like to thank all 10~000+ volunteers who contributed to the project, as well as the members of the Radio Galaxy Zoo collaboration, notably Stas Shabala, Larry Rudnick, Heinz Andernach, Avery Garon, Anna Kapinska, and Ray Norris, all of whom contributed to discussion of my work for these chapters. I must also thank those who provided me funding over this PhD: the Australian Government, the Research School of Astronomy and Astrophysics, Data61/CSIRO, and the Astronomical Society of Australia.
 
 A special thank you to those who proof-read this thesis: Rachel Alger, Jakub Nabaglo, Henry Zovaro, and Eloise Birchall.
 
