--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -2,7 +2,7 @@
 \chapter{Radio Sources}
 \label{cha:background}
 
-    As its title suggests, this thesis is focused on the identification of extended radio sources. This chapter introduces extended radio sources, describing what we see when we look at the sky with radio eyes (and radio telescopes). We will discuss the different kinds of radio sources that we can observe, how they are distributed throughout the Universe, and key issues surrounding their identification.
+    As its title suggests, this thesis is focused on the identification of extended radio sources. This chapter introduces extended radio sources, describing what we see when we look at the sky with radio eyes and radio telescopes. We will discuss the different kinds of radio sources that we can observe, how they are distributed throughout the Universe, and key issues surrounding their identification. We will start by looking at the extragalactic radio sky, introducing what it is we see through radio telescopes (\autoref{sec:extragalactic-radio-sky}). Then, we will describe the physics behind radio emission, including the emission mechanisms that allow us to observe active galactic nuclei in radio, and how radio polarisation can help us determine aspects of distant magnetic fields (\autoref{sec:radio-astronomy}). From there we will turn to active galactic nuclei as they will be the objects of interest in this thesis (\autoref{sec:agn}): what do they look like, how are they structured, and what do they do? Finally, we will cover three different tasks we may face when presented with a collection of observed AGN, including classification (\autoref{sec:classification-of-agn}), cross-identification (\autoref{sec:xid}), and source aggregation (\autoref{sec:aggregation}).
 
     \begin{figure}[ht]
         \includegraphics[width=\textwidth]{images/gleam.jpg}
