--- a/thesis/listofconstants.tex
+++ b/thesis/listofconstants.tex
@@ -15,3 +15,37 @@ $c$ & m s$^{-1}$ & Speed of light & $2.99792458 \times 10^8$ \\
 $\sigma_T$ & m$^2$ & Thomson cross section & $6.6524587321(60) \times 10^{-29}$\\
 \bottomrule
 \end{longtable}
+
+\chapter*{List of Abbreviations}
+
+The following list summarises abbreviations that are commonly used in this thesis.
+
+\begin{itemize}
+    \item AGN: active galactic nuclei, energetic objects at the centre of galaxies
+    \item ASKAP: Australian Square Kilometre Array Pathfinder, a next-generation radio telescope in Murchison
+    \item ATCA: Australia Telescope Compact Array, a radio telescope in Narrabri
+    \item CNN: convolutional neural network, a classifier which works on images and spectra
+    \item EMU: Evolutionary Map of the Universe, an upcoming large radio survey
+    \item FDF: Faraday dispersion function, a representation of a polarisation spectrum
+    \item FIRST: Faint Images of the Radio Sky at Twenty Centimeters, a large radio survey
+    \item FRI: Fanaroff-Riley type I, an edge-darkened radio galaxy
+    \item FRII: Fanaroff-Riley type II, an edge-brightned radio galaxy
+    \item ISM: interstellar medium, the stuff between stars
+    \item LR: logistic regression, a classification model
+    \item MWA: Murchison Widefield Array, a next-generation radio telescope in Murchison
+    \item NVSS: NRAO VLA Sky Survey, a large radio survey
+    \item POSSUM: Polarisation Sky Survey of the Universe's Magnetism, an upcoming large radio polarisation survey
+    \item RACS: Rapid ASKAP Continuum Survey, a new large radio survey
+    \item RF: random forests, a classification model
+    \item RGZ: Radio Galaxy Zoo, a citizen science project to cross-identify and aggregate radio sources
+    \item RLF: radio luminosity function, a description of how common radio galaxies of different energies are
+    \item RM: rotation measure, the amount of Faraday rotation between a polarised source and an observer
+    \item RMSF: rotation measure spread function, the kernel convolving a FDF
+    \item SDSS: Sloan Digital Sky Survey, a large optical spectroscopic and photometric survey
+    \item SFR: star formation rate, the recent rate of star formation
+    \item SKA: Square Kilometre Array, a next-generation radio telescope yet to be built
+    \item SNR: signal-to-noise ratio, the ratio of total intensity to noise level
+    \item SWIRE: \emph{Spitzer} Wide-area Infrared Extragalactic Survey, a deep infrared survey
+    \item VLA: Very Large Array, a radio telescope in New Mexico
+    \item XGB: extreme gradient boosted trees, a classification model
+\end{itemize}
